# pyCauchyKesai

./: .clang-format  .gitignore  CONTRIBUTING.md  CONTRIBUTING_cn.md  IMPROVEMENTS.md  README.md  README_cn.md  pyproject.toml  test.py
.github/workflows/: ci.yml
Bayes/: CMakeLists.txt  DIFFERENCES.md  pyproject.toml
Bayes/include/: pyCauchyKesai.h
Bayes/pyCauchyKesai/: __init__.py  __init__.pyi
Bayes/src/: pyCauchyKesai.cpp  pyCauchyKesai_bindings.cpp
Nash/: CMakeLists.txt  pyproject.toml
Nash/include/: pyCauchyKesai.h
Nash/include/hobot/dnn/: hb_dnn.h
Nash/include/hobot/hpl/: hb_fft.h  hb_hpl.h  hb_ifft.h  hb_ifft_2d.h
Nash/include/hobot/plugin/dsp_plugin/: hb_dsp.h
Nash/include/hobot/vp/: hb_vp_bilateral_filter.h  hb_vp_box_filter.h  hb_vp_canny.h  hb_vp_corner_harris.h  hb_vp_filter2d.h  hb_vp_flip.h  hb_vp_hb_demosaicing.h  hb_vp_integral.h  hb_vp_laplacian_filter.h  hb_vp_median_blur.h  hb_vp_opticalflow_pyrlk.h  hb_vp_roi_resize.h  hb_vp_stitch.h  hb_vp_video_codec.h  hb_vp_warp_affine.h
Nash/pyCauchyKesai/: __init__.py  __init__.pyi
Nash/src/: pyCauchyKesai.cpp  pyCauchyKesai_bindings.cpp
csrc/: CMakeLists.txt
csrc/common/: bpu_align.h
csrc/nash/: CMakeLists.txt  bindings.cpp  cauchy_kesai.cpp  ion_array.cpp  ion_array_desc.cpp  ion_memory.cpp  platform.cpp
csrc/nash/include/cauchykesai/: ion_array.h  ion_array_desc.h  ion_memory.h  platform.h  pycauchykesai.h
csrc/nash/include/hobot/: hb_ucp.h  hb_ucp_status.h  hb_ucp_sys.h
csrc/nash/include/hobot/dnn/: hb_dnn_status.h
csrc/nash/include/hobot/hpl/: hb_fft_2d.h
csrc/nash/include/hobot/plugin/dsp_plugin/: hb_dsp_addr_map.h
csrc/nash/include/hobot/vp/: hb_vp.h  hb_vp_cvt_color.h  hb_vp_dilate.h  hb_vp_equalize_hist.h  hb_vp_erode.h  hb_vp_gaussian_blur.h  hb_vp_isp.h  hb_vp_jpeg_codec.h  hb_vp_pyr_down.h  hb_vp_pyr_up.h  hb_vp_remap.h  hb_vp_resize.h  hb_vp_rotate.h  hb_vp_sep_filter2d.h  hb_vp_sobel.h  hb_vp_threshold.h  hb_vp_transpose.h  hb_vp_warp_perspective.h
docs/: API_cn.md  cn_CauchyKesai_Auto.md  cn_CauchyKesai_with_IONArray.md  cn_HBDK_Proposal.md  cn_IMPROVEMENTS.md  cn_Platform.md  cn_README.md  cn_TestCases.md  cn_install.md
examples/: ion_preprocess_demo.py
scripts/: build_wheels.sh
src/pyCauchyKesai/: __init__.py  _render.py  pycauchykesai.pyi
src/pyCauchyKesai/tools/: __init__.py  bpu_rate.py  ez_onnx.py
tests/: README.md  _pipeline.py  conftest.py  test_ai_native.py  test_cauchy_kesai.py  test_integration.py  test_python_wrapper.py  test_render.py  test_version.py
tests/dimensions/: _harness.py  _make_total_report.py  _paths.py  conftest.py
tests/dimensions/d10_determinism/: test_d10_determinism.py
tests/dimensions/d11_api_metadata/: test_d11_api_contract.py
tests/dimensions/d1_ops_structure/: test_d1_ops.py
tests/dimensions/d2_tensor_shape/: test_d2_rank_shape.py
tests/dimensions/d3_io_arity/: test_d3_io_arity.py
tests/dimensions/d4_inference_paths/: test_d4_paths_equivalence.py
tests/dimensions/d5_memory_alignment/: test_d5_zerocopy_layout.py
tests/dimensions/d6_quantization/: test_d6_dtype_quant.py
tests/dimensions/d7_core_equivalence/: test_d7_core_equivalence.py
tests/dimensions/d8_concurrency/: test_d8_concurrency.py
tests/dimensions/d9_error_paths/: test_d9_error_robustness.py
tests/docvariant/: REPORT.md  conftest.py  test_doc_construct.py  test_doc_envvar.py  test_doc_inference.py  test_doc_ionarray.py  test_doc_metadata.py  test_doc_scheduling.py  test_doc_zerocopy.py
tests/generate/: README.md  build_matrix.py  gen_doc_variants.py  run_cloud.sh  sync_to_board.sh
tests/golden/: README.md  conftest.py  harness.py  run_characterization.py  test_golden_models.py
tests/nash/: test_ion_array.py  test_ion_memory.py
