[build-system]
requires = ["scikit-build-core>=0.9,<0.12", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyCauchyKesai"
version = "0.0.9"
description = "Python bindings for CauchyKesai (RDK X5 / Bayes platform)"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
]

[tool.scikit-build]
cmake.args = [
    "-DPYTHON_BINDINGS=ON",
]
wheel.packages = ["pyCauchyKesai"]
